# MayaFlux

./: .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .woodpecker.yml  API_2Random_8cpp.html  API_2Random_8cpp.js  API_2Random_8cpp__incl.map  API_2Random_8cpp__incl.md5  API_2Random_8cpp_source.html  API_2Random_8hpp.html  API_2Random_8hpp.js  API_2Random_8hpp__dep__incl.map  API_2Random_8hpp__dep__incl.md5  API_2Random_8hpp_source.html  Advanced__Context__Control_8md.html  Agent_8cpp.html  Agent_8cpp__incl.map  Agent_8cpp__incl.md5  Agent_8cpp_source.html  Agent_8hpp.html  Agent_8hpp.js  Agent_8hpp__dep__incl.map  Agent_8hpp__dep__incl.md5  Agent_8hpp__incl.map  Agent_8hpp__incl.md5  Agent_8hpp_source.html  AggregateBindingsProcessor_8cpp.html  AggregateBindingsProcessor_8cpp__incl.map  AggregateBindingsProcessor_8cpp__incl.md5  AggregateBindingsProcessor_8cpp_source.html  AggregateBindingsProcessor_8hpp.html  AggregateBindingsProcessor_8hpp.js  AggregateBindingsProcessor_8hpp__dep__incl.map  AggregateBindingsProcessor_8hpp__dep__incl.md5  AggregateBindingsProcessor_8hpp__incl.map  AggregateBindingsProcessor_8hpp__incl.md5  AggregateBindingsProcessor_8hpp_source.html  AnalysisHelper_8cpp.html  AnalysisHelper_8cpp.js  (+40659 more)
cmake/spirv_reflect/: CMakeLists.txt
src/: CMakeLists.txt  config.h  lila_server.cpp  main.cpp  test_lila.cpp
src/Core/: Device.cpp  Engine.cpp  Engine.hpp  Stream.cpp  Stream.hpp
src/Host/: Host.cmake
src/Host/Live/: Runtime.cpp  Runtime.hpp
src/Lila/: CMakeLists.txt  ClangInterpreter.cpp  ClangInterpreter.hpp  ClangSymbolParser.cpp  ClangSymbolParser.hpp  Commentator.hpp  Event.cpp  Event.hpp  EventBus.cpp  EventBus.hpp  JITCompiler.cpp  JITCompiler.hpp  Lila.cpp  Lila.hpp  LiveAid.hpp  Server.cpp  Server.hpp  ServerThread.hpp  SimpleSymbolParser.hpp  SymbolActions.cpp  SymbolActions.hpp  SymbolRegistry.hpp  WindowsJITSymbols.cpp  config.h  pch.h
src/MayaFlux/: CMakeLists.txt  EnumUtils.hpp  MayaFlux.cpp  MayaFlux.hpp  Memory.hpp  Parallel.hpp  Utils.cpp  Utils.hpp  cling_helper.hpp
src/MayaFlux/API/: API.cmake  Chronie.cpp  Chronie.hpp  Config.cpp  Config.hpp  Core.cpp  Core.hpp  Depot.cpp  Depot.hpp  Graph.cpp  Graph.hpp  Input.cpp  Input.hpp  Random.cpp  Random.hpp  Rigs.cpp  Rigs.hpp  ViewportPreset.cpp  ViewportPreset.hpp  Windowing.cpp  Windowing.hpp  Yantra.cpp  Yantra.hpp
src/MayaFlux/Buffers/: AudioBuffer.cpp  AudioBuffer.hpp  Buffer.hpp  BufferManager.cpp  BufferManager.hpp  BufferProcessingChain.cpp  BufferProcessingChain.hpp  BufferProcessor.cpp  BufferProcessor.hpp  BufferSpec.hpp  BufferUtils.cpp  BufferUtils.hpp  Buffers.cmake  Feedback.cpp  Feedback.hpp  NodeSource.cpp  NodeSource.hpp  RootAudioBuffer.cpp  RootAudioBuffer.hpp  VKBuffer.cpp  VKBuffer.hpp
src/MayaFlux/Containers/: DataProcessingChain.cpp  DataProcessingChain.hpp  DataProcessor.hpp  SignalSourceContainer.hpp
src/MayaFlux/Core/: AudioCallback.cpp  AudioCallback.hpp  Buffer.cpp  Buffer.hpp  BufferManager.cpp  BufferManager.hpp  Core.cmake  Device.cpp  Device.hpp  Engine.cpp  Engine.hpp  GlobalGraphicsInfo.hpp  GlobalInputConfig.hpp  GlobalNetworkConfig.hpp  GlobalStreamInfo.hpp  ProcessingArchitecture.cpp  ProcessingArchitecture.hpp  ProcessingTokens.hpp  Stream.cpp  Stream.hpp  SubsystemManager.cpp  SubsystemManager.hpp  Utils.hpp
src/MayaFlux/Host/: Host.cmake
src/MayaFlux/IO/: AudioEncodeContext.cpp  AudioEncodeContext.hpp  AudioStreamContext.cpp  AudioStreamContext.hpp  CameraReader.cpp  CameraReader.hpp  EXRWriter.cpp  EXRWriter.hpp  FFmpegDemuxContext.cpp  FFmpegDemuxContext.hpp  FFmpegMuxContext.cpp  FFmpegMuxContext.hpp  FileReader.hpp  FileWriter.hpp  GlmSerializer.hpp  IO.cmake  IOManager.cpp  IOManager.hpp  ImageExport.cpp  ImageExport.hpp  ImageReader.cpp  ImageReader.hpp  ImageWriter.hpp  JSONSerializer.cpp  JSONSerializer.hpp  Keys.cpp  Keys.hpp  ModelReader.cpp  ModelReader.hpp  Reflection.hpp  STBImageWriter.cpp  STBImageWriter.hpp  SoundFileReader.cpp  SoundFileReader.hpp  SoundFileWriter.cpp  SoundFileWriter.hpp  TextFileWriter.cpp  TextFileWriter.hpp  TinyExrImpl.cpp  VideoEncodeContext.cpp  (+7 more)
src/MayaFlux/Journal/: Ansi.hpp  Archivist.cpp  Archivist.hpp  ConsoleSink.hpp  FileSink.hpp  Format.hpp  Journal.cmake  JournalEntry.hpp  RealtimeEntry.hpp  RingBuffer.hpp  Sink.hpp
src/MayaFlux/Kakshya/: DataProcessingChain.cpp  DataProcessingChain.hpp  DataProcessor.hpp  FileContainer.hpp  Kakshya.cmake  KakshyaUtils.cpp  KakshyaUtils.hpp  NDData.cpp  NDData.hpp  NDimensionalContainer.cpp  NDimensionalContainer.hpp  OrganizedRegion.hpp  Region.hpp  RegionCacheManager.cpp  RegionCacheManager.hpp  SignalSourceContainer.hpp  StreamContainer.hpp  TypeSpec.hpp
src/MayaFlux/Kinesis/: BasisMatrices.hpp  Geometry2D.cpp  Geometry2D.hpp  GeometryPrimitives.cpp  GeometryPrimitives.hpp  KMarchingTable.hpp  Kinesis.cmake  MarchingCube.cpp  MatrixTransforms.cpp  Morphology.hpp  (+16 more)
src/Nodes/: Node.hpp
tests/: CMakeLists.txt  mayaflux_api_test.cpp  mock_signalsourcecontainer.hpp  test_config.h
tests/Yantra/: AdvancedExtractor_test.cpp  ExtractorPipeline_test.cpp  Sorter_test.cpp  StatisticalAnalyzer_test.cpp  energyanalyzer_test.cpp  mock_extractor.hpp
tests/buffers/: audio_buffer_test.cpp  buffer_manager_test.cpp  containerbuffer_test.cpp  logic_processor_test.cpp
tests/containers/: accessprocessor_test.cpp  region_processor_test.cpp  region_test.cpp  soundfilecontainer_test.cpp  soundstreamcontainer_test.cpp
tests/core/: audio_subsystem_test.cpp  buffer_manager_test.cpp  engine_test.cpp  rtaudio_test.cpp  scheduler_test.cpp  subsystem_manager_test.cpp
tests/nodes/: logic_test.cpp  network_test.cpp  node_state_test.cpp  node_test.cpp  polynomial_test.cpp  utility_nodes_test.cpp
tests/tasks/: capture_bridge_test.cpp  capture_pipeline_test.cpp  tasks_test.cpp
tests/yantra/: advancedextractor_test.cpp  computegrammar_test.cpp  computematrix_test.cpp  computepipeline_test.cpp  eigen_test.cpp  energyanalyzer_test.cpp  featureextractor_test.cpp  grammar_advanced_test.cpp  matrix_test.cpp  sorter_test.cpp  statisticalanalyzer_test.cpp  transformer_test.cpp
(+1374 files in other folders)
